

Name: Segue Change Log



v. 1.8.11 (2007-10-18)
----------------------------------------------------
This release fixes the remaining known bugs introduced in the 1.8.5 security patch.
		
		
	* Change: 
		Have updated the Moodle connector to work with Moodle version 1.8.3. This
		code is still experimental.
		(2007-10-17 - Alex Chapin)		
		
	* Bug Fix: 
		Files uploaded to the media library with the same name as files already in
		the media library will once again overwrite old files. As well messages
		relating to uploads once again being printed.
		(2007-10-17 - Alex Chapin)
		(reported by Sasha Woolson of Middlebury College)		
		
	* Bug Fix: #1811150 
		Error no longer displayed after creating group sites.
		(2007-10-16 - Adam Franco)
		(reported by Melanie Hoag of Southwestern University)		
		
	* Bug Fix: 
		Site and Logs search UI once again working properly.
		(2007-10-16 - Alex Chapin)
		
	* Bug Fix: 
		Media Library search UI once again working properly.
		(2007-10-16 - Alex Chapin)
		
	* Bug Fix: #1814739 
		Media Library pagination once again working properly.
		(2007-10-16 - Alex Chapin)
		(reported by Sasha Woolson of Middlebury College, Melanie Hoag of Southwestern University)
		
	* Bug Fix: 
		RSS type pages (i.e. sidebar RSS) once again properly save urls and display
		feeds. 
		(2007-10-16 - Alex Chapin)
		
	* Bug Fix: 
		Link type pages (e.g. sidebar links) once again properly save urls and
		display link.
		(2007-10-16 - Alex Chapin)
		
	* Bug Fix: 
		Removed the link to "add students of 'slot-name'" as editors in the edit
		permissions UI for all non-class sites.
		(2007-10-16 - Alex Chapin)
		
	* Change: 
		Have removed the "class" type from the add/edit slots UI since this UI does
		not really generated "class" type slots in the same way as the add/edit
		classes UI does.
		(2007-10-15 - Alex Chapin)
		
	* Bug Fix: 
		The discussion header text is now visible on for all themes (some theme
		settings resulted in white on white text)