@@ -24,8 +24,8 @@
 <body>
 <h1>Segue Change Log</h1>
 <h2>Version 1.8.11</h2>
-<h3>The Future</h3>
-<p></p>
+<h3>2007-10-18</h3>
+<p>This release fixes the remaining known bugs introduced in the 1.8.5 security patch.</p>
 <ul>
 		
 		<li>
@@ -41,7 +41,7 @@
 <b>Bug Fix:</b> Media Library search UI once again working properly. (<em>2007-10-16 - Alex Chapin</em>)</li>
 		<li>
 <b>Bug Fix:</b>
-				#1814739 Media Library pagination once again working properly. (<em>2007-10-16 - Alex Chapin</em>)<br> (<em>reported by Sasha Woolson of Middlebury College,  mel_hoag</em>)</li>
+				#1814739 Media Library pagination once again working properly. (<em>2007-10-16 - Alex Chapin</em>)<br> (<em>reported by Sasha Woolson of Middlebury College, Melanie Hoag of Southwestern University</em>)</li>
 		<li>
 <b>Bug Fix:</b> RSS type pages (i.e. sidebar RSS) once again properly save urls and display feeds. (<em>2007-10-16 - Alex Chapin</em>)</li>
 		<li>
