@@ -3,7 +3,7 @@
 	<version number="1.8.11" date="2007-10-18">
 		<releaseNotes>
 			This release fixes the remaining known bugs introduced in the 1.8.5
-			security patch.
+			security patch. See the changelog for details.
 		</releaseNotes>
 		<change author='alex' date='2007-10-17'>
 			Have updated the Moodle connector to work with Moodle version 1.8.3. This code is still
