@@ -182,12 +182,18 @@
 			</xsl:call-template>
 		</xsl:when>
 		<xsl:otherwise>
+			<xsl:variable name="author">
+				<xsl:call-template name="trim">
+					<xsl:with-param name="s" select="$str"/>
+				</xsl:call-template>
+			</xsl:variable>
+		
 			<xsl:choose>
-				<xsl:when test="//authors/name[@short=$str]">
-					<xsl:value-of select="//authors/name[@short=$str]" />
+				<xsl:when test="//authors/name[@short=$author]">
+					<xsl:value-of select="//authors/name[@short=$author]" />
 				</xsl:when>
 				<xsl:otherwise>
-					<xsl:value-of select="$str" />
+					<xsl:value-of select="$author" />
 				</xsl:otherwise>
 			</xsl:choose>
 		</xsl:otherwise>
@@ -196,6 +202,7 @@
 
 <xsl:template name="reporters">
 	<xsl:param name="str"/>
+	
 	<xsl:choose>
 	<xsl:when test="contains($str,',')">
 		<xsl:call-template name="reporters">
@@ -207,18 +214,24 @@
 		</xsl:call-template>
 	</xsl:when>
 	<xsl:otherwise>
+		<xsl:variable name="reporter">
+			<xsl:call-template name="trim">
+				<xsl:with-param name="s" select="$str"/>
+			</xsl:call-template>
+		</xsl:variable>
+	
 		<xsl:choose>
-			<xsl:when test="//reporters/reporter[@short=$str]">
-				<xsl:value-of select="//reporters/reporter[@short=$str]/name" />
+			<xsl:when test="//reporters/reporter[@short=$reporter]">
+				<xsl:value-of select="//reporters/reporter[@short=$reporter]/name" />
 				<xsl:choose>
-					<xsl:when test="//reporters/reporter[@short=$str]/institution">
+					<xsl:when test="//reporters/reporter[@short=$reporter]/institution">
 						 <xsl:text> of </xsl:text>
-						<xsl:value-of select="//reporters/reporter[@short=$str]/institution" />
+						<xsl:value-of select="//reporters/reporter[@short=$reporter]/institution" />
 					</xsl:when>
 				</xsl:choose>
 			</xsl:when>
 			<xsl:otherwise>
-				<xsl:value-of select="$str" />
+				<xsl:value-of select="$reporter" />
 			</xsl:otherwise>
 		</xsl:choose>
 	</xsl:otherwise>
