@@ -7,6 +7,7 @@ Name: Segue Change Log
 v. 1.8.11 (2007-10-18)
 ----------------------------------------------------
 This release fixes the remaining known bugs introduced in the 1.8.5 security patch.
+See the changelog for details.
 		
 		
 	* Change: 
